WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
176681
[WinCairo] Fix the wincairo build after
r221839
https://bugs.webkit.org/show_bug.cgi?id=176681
Summary
[WinCairo] Fix the wincairo build after r221839
Yoshiaki Jitsukawa
Reported
2017-09-10 20:43:26 PDT
Curl port needs to follow the change of FormData::flattern() 'WebCore::FormData::flatten': function does not take 1 arguments
Attachments
Patch
(1.30 KB, patch)
2017-09-10 20:49 PDT
,
Yoshiaki Jitsukawa
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Yoshiaki Jitsukawa
Comment 1
2017-09-10 20:49:39 PDT
Created
attachment 320416
[details]
Patch
Per Arne Vollan
Comment 2
2017-09-11 10:13:07 PDT
Comment on
attachment 320416
[details]
Patch R=me.
WebKit Commit Bot
Comment 3
2017-09-11 10:43:03 PDT
Comment on
attachment 320416
[details]
Patch Clearing flags on attachment: 320416 Committed
r221864
: <
http://trac.webkit.org/changeset/221864
>
WebKit Commit Bot
Comment 4
2017-09-11 10:43:05 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 5
2017-09-27 12:33:47 PDT
<
rdar://problem/34693490
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug