[WinCairo] Fix the wincairo build after r221839 https://bugs.webkit.org/show_bug.cgi?id=176681

Patch by Yoshiaki Jitsukawa <Yoshiaki.Jitsukawa@sony.com> on 2017-09-11
Reviewed by Per Arne Vollan.

* platform/network/curl/ResourceHandleCurlDelegate.cpp:
(WebCore::ResourceHandleCurlDelegate::setupPOST):

Canonical link: https://commits.webkit.org/193209@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@221864 268f45cc-cd09-0410-ab3c-d52691b4dbfc